--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <p>Here you will find images of our projects.</p>
+             <img src="/images/gallery.jpg">
+             <img src="/images/desk.jpg">
+             <img src="/images/table.jpg">
     </section>
     <section id="testimonials">
         <h2>Testimonials</h2>
