--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <p>Here you will find images of our projects.</p>
-             <img src="gallery.jpg">
-             <img src="desk.jpg">
-             <img src="table.jpg">
+             <img src="gallery.jpg"  style="width: 300px; height: auto; border-radius: 15px;">
+             <img src="desk.jpg" style="width: 300px; height: auto; border-radius: 15px;">
+             <img src="table.jpg" style="width: 300px; height: auto; border-radius: 15px;">
     </section>
     <section id="testimonials">
         <h2>Testimonials</h2>
