--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2>Gallery</h2>
         <p>Here you will find images of our projects.</p>
              <img src="gallery.jpg"  style="width: 300px; height: auto; border-radius: 15px;">
-             <img src="desk.jpg" style="width: 300px; height: auto; border-radius: 15px;">
+             <img src="desk.jpeg" style="width: 300px; height: auto; border-radius: 15px;">
              <img src="table.jpg" style="width: 300px; height: auto; border-radius: 15px;">
     </section>
     <section id="testimonials">
